--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 # Jwt properties
 jwt.secret=bohdan
 jwt.lifetime=30m
+
+spring.main.allow-circular-references=true
